Adaptation of <header>, connection of fonts

--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,41 @@
 }
 
 body {
+	font-family: "Roboto", sans-serif;
 	background-color: var(--color1);
+	color: var(--font-color1);
 }
 
 a,
 a:visited {
 	color: inherit;
+	line-height: inherit;
 	text-decoration: none;
 }
 
 button {
 	border: none;
 	background-color: transparent;
+}
+
+ul {
+	list-style: none;
+
+	display: flex;
+}
+
+h2, h3, h4 {
+	font-weight: 700;
+}
+
+h2 {
+	font-size: 12.266667vw;
+}
+
+h3 {
+	font-size: 6.933334vw;
+}
+
+h4 {
+	font-size: 4.8vw;
 }
