--- a/css/variables.css
+++ b/css/variables.css
@@ -1,4 +1,23 @@
 :root {
 	--color1: rgb(255, 255, 255);
 	--color2: rgb(221, 221, 221);
+	--font-color1: rgb(0, 0, 0);
+}
+
+@font-face {
+    font-family: "Roboto";
+    src: url("../fonts/Roboto-Bold.ttf") format("truetype");
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: "Roboto";
+    src: url("../fonts/Roboto-Medium.ttf") format("truetype");
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: "Roboto";
+    src: url("../fonts/Roboto-Regular.ttf") format("truetype");
+    font-weight: 400;
 }
