--- a/css/headerStyle.css
+++ b/css/headerStyle.css
@@ -26,8 +26,8 @@
 }
 
 .header__btn {
-	width: 16vw;
-	height: calc(16vw - 0.266667vw);
+	width: 15.733334vw;
+	height: 15.466667vw;
 	border-left: 0.266667vw solid var(--color2);
 	cursor: pointer;
 
@@ -44,4 +44,84 @@
 .header__search {
 	width: 4.168vw;
 	height: 4.168vw;
+}
+
+@media screen and (min-width: 376px) {
+	.header {
+		width: 100vw;
+		height: 2.760417vw;
+		border: 0.052084vw solid var(--color2);
+	}
+	
+	.header__logo {
+		width: 1.822917vw;
+		height: 1.822917vw;
+	
+		margin-right: 61.041667vw;
+		margin-left: 0.729167vw;
+	}
+	
+	.header__nav {
+		font-size: 0.729167vw;
+		font-weight: 500;
+		line-height: 128%;
+
+		display: block;
+	}
+
+	.header__nav ul {
+		margin-right: 1.041667vw;
+	}
+
+	.header__nav li {
+		height: 2.760417vw;
+		cursor: pointer;
+
+		display: flex;
+		align-items: center;
+		padding: 0px 1.041667vw;
+	}
+
+	.header__nav a {
+		text-align: center;
+	}
+
+	.header__nav li:nth-child(1) a {
+		width: 1.875vw;
+	}
+
+	.header__nav li:nth-child(2) a {
+		width: 4.166667vw;
+	}
+
+	.header__nav li:nth-child(3) a {
+		width: 3.072917vw;
+	}
+
+	.header__nav li:nth-child(4) a {
+		width: 4.947917vw;
+	}
+
+	.header__nav li:nth-child(5) a {
+		width: 3.020833vw;
+	}
+
+	.header__nav li:nth-child(6) a {
+		width: 2.96875vw;
+	}
+
+	.header button:first-of-type {
+		display: none;
+	}
+	
+	.header__btn {
+		width: 2.708334vw;
+		height: 2.65625vw;
+		border-left: 0.052083vw solid var(--color2);
+	}
+	
+	.header__search {
+		width: 0.814063vw;
+		height: 0.814063vw;
+	}
 }
