--- a/css/style.css
+++ b/css/style.css
@@ -48,3 +48,13 @@ main {
 	display: flex;
 	justify-content: center;
 }
+
+@media screen and (min-width: 376px) {
+	h2, h3 {
+		font-size: 2.395833vw;
+	}
+	
+	h4 {
+		font-size: 1.25vw;
+	}
+}
