--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,8 @@ h4 {
 
 main {
 	display: flex;
-	justify-content: center;
+	flex-direction: column;
+	align-items: center;
 }
 
 @media screen and (min-width: 768px) {
