--- a/css/signpostStyle.css
+++ b/css/signpostStyle.css
@@ -38,7 +38,7 @@
 	width: 45.866667vw;
 
 	position: absolute;
-	z-index: -1;
+	z-index: 0;
 }
 
 .post__heading h3 {
@@ -83,7 +83,6 @@
 	border-bottom: 0.266667vw solid var(--color2);
 
 	display: flex;
-	align-items: flex-start;
 	padding-bottom: 2.666667vw;
 	margin-bottom: 4vw;
 }
@@ -212,11 +211,12 @@
 	
 	.post__event {
 		width: 43.75vw;
+		height: 2.34375vw;
 		border-bottom: 0.052083vw solid var(--color2);
 	
 		display: flex;
-		align-items: flex-start;
-		padding-bottom: 1.25vw;
+		align-items: center;
+		padding-bottom: 0.989583vw;
 		margin-bottom: 0.78125vw;
 	}
 	
