--- a/css/signpostStyle.css
+++ b/css/signpostStyle.css
@@ -38,7 +38,6 @@
 	width: 45.866667vw;
 
 	position: absolute;
-	z-index: 0;
 }
 
 .post__heading h3 {
@@ -52,7 +51,7 @@
 	font-size: 3.2vw;
 	font-weight: 500;
 	line-height: 157%;
-	letter-spacing: 3.13%;
+	letter-spacing: 0.03em;
 	color: var(--color3);
 
 	margin-top: 9.6vw;
