--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ main {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: center;
 }
 
 @media screen and (min-width: 768px) {
