--- a/css/variables.css
+++ b/css/variables.css
@@ -2,6 +2,7 @@
 	--color1: rgb(255, 255, 255);
 	--color2: rgb(221, 221, 221);
 	--color3: rgb(118, 118, 118);
+	--color4: rgb(243, 243, 243);
 	--font-color1: rgb(0, 0, 0);
 	--font-color2: rgb(19, 19, 19);
 	--font-color3: rgb(117, 59, 189);
